--- a/fastbook/textbook/04_mnist_basics.ipynb
+++ b/fastbook/textbook/04_mnist_basics.ipynb
@@ -5853,7 +5853,7 @@
    "split_at_heading": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5867,7 +5867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
