--- a/fastbook/textbook/04_mnist_basics.ipynb
+++ b/fastbook/textbook/04_mnist_basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -10,15 +10,7 @@
     "id": "sk4DKZryaKfy",
     "outputId": "c871530f-0038-4f6c-b22c-64053b20db76"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: graphviz in /home/christian/.local/lib/python3.6/site-packages (0.17)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#hide\n",
     "!pip install -Uqq fastbook\n",
@@ -408,7 +400,8 @@
     "1. Download dataset, verify data was extracted correctly\n",
     "2. Convert images into individual tensors then combine tensors into a single stack\n",
     "3. Take average of tensor stack and obtain 'ideal digit' value\n",
-    "4. Repeat steps 1-3 with the validation set"
+    "4. Repeat steps 1-3 with the validation set\n",
+    "5. Determine the accuracy (a metric)"
    ]
   },
   {
@@ -4809,7 +4802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
